Compiler/testdata/static/staticallyAccessNonStatic.sc.errors
error: Illegal access to non static member at line   3, character  7
error: Illegal access to non static member at line  13, character  7
